fixed-style-align-design

--- a/src/styleScss/Nav.scss
+++ b/src/styleScss/Nav.scss
@@ -108,9 +108,12 @@
   text-align: center;
   max-width: 100%;
   img {
+    @include breakpoint("small device") {
+      width: 350px;
+    }
     width: 100%;
     height: auto;
-    max-width: 400px;
+    max-width: 500px;
     display: block;
     margin: 0 auto;
   }
